--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,6 +10,9 @@ spring.h2.console.path=/h2-console
 
 # JPA, SQL
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:import.sql
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
